k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: poc-app
  name: poc-app
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
  selector:
    app: poc-app
